Specify source file encoding in build.xml
Fixes the build on systems with a standard encoding that's not UTF-8, such as when LC_ALL=C

--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
     <target name="compile-socket" depends="init">
         <mkdir dir="${build.project.dir}"/>
 
-        <javac destdir="${build.project.dir}" source="${javac.source}" target="${javac.target}" includeantruntime="false">
+        <javac destdir="${build.project.dir}" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8">
             <src path="${src.dir}"/>
             <classpath>
                 <fileset dir="${lib.dir}">
