Misc ant cleanup

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -27,8 +27,8 @@ jar.index=true
 javac.source=1.7
 javac.target=1.7
 
-manifest.application.name=${applet.name}
-manifest.main.socket.class=qz.ws.PrintSocketServer
+manifest.application.name=${project.name}
+manifest.main.class=qz.ws.PrintSocketServer
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
 manifest.permissions=all-permissions
 
