--- a/ant/project.properties
+++ b/ant/project.properties
@@ -6,6 +6,8 @@ vendor.email=support@qz.io
 project.name=QZ Tray
 project.filename=qz-tray
 
+launch.opts=-Xms512m
+
 js.dir=js
 css.dir=css
 fonts.dir=fonts
