--- a/ant/apple/apple-launcher.sh.in
+++ b/ant/apple/apple-launcher.sh.in
@@ -8,9 +8,9 @@ fallback=$?
 
 # Fallback on Internet Plug-Ins version if needed
 if [ $fallback -eq 0 ]; then
-	${apple.jvmcmd} java -Xdock:name="${project.name}" -Xdock:icon="$iconpath" -jar "$jarpath"
+	${apple.jvmcmd} java ${launch.opts} -Xdock:name="${project.name}" -Xdock:icon="$iconpath" -jar "$jarpath"
 else
-	"${apple.jvmfallback}/java" -Xdock:name="${project.name}" -Xdock:icon="$iconpath" -jar "$jarpath"
+	"${apple.jvmfallback}/java" ${launch.opts} -Xdock:name="${project.name}" -Xdock:icon="$iconpath" -jar "$jarpath"
 fi
 
 exit $?
