Fix travis on Apple
Second attempt to fix travis by forcing JDK8 on Apple

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
     - jdk: oraclejdk8
       env: TARGET=makeself
     - os: osx
+      jdk: oraclejdk8
       env: TARGET=pkgbuild
 language: java
 before_script: 
