--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
     - jdk: openjdk7
       env: TARGET=makeself
     - os: osx
+      jdk: oraclejdk8
       env: TARGET=pkgbuild
 language: java
 before_script:
