Fix travis on Apple 2
Fix JDK8 compilation by using a newer XCode image
Per https://github.com/travis-ci/travis-ci/issues/2316

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     - jdk: openjdk7
       env: TARGET=makeself
     - os: osx
-      jdk: oraclejdk8
+      osx_image: xcode8
       env: TARGET=pkgbuild
 language: java
 before_script:
