--- a/ant/apple/apple-launcher.sh.in
+++ b/ant/apple/apple-launcher.sh.in
@@ -1,4 +1,18 @@
 #!/bin/bash
+##########################################################################################
+#                                  ${project.name} MacOS Launcher                                #
+##########################################################################################
+#  Description:                                                                          #
+#    1. Searches for Java                                                                #
+#    2. Launches ${project.name} with the best Java version                              #
+#                                                                                        #
+#  Depends:                                                                              #
+#    java                                                                                #
+#                                                                                        #
+#  Usage:                                                                                #
+#    $ ./${project.name}                                                                 #
+##########################################################################################
+
 # Build absolute path to the jar file, based relative to the location of this script
 installpath=$(echo "$0" | rev | cut -d/ -f4- | rev)
 jarpath=$installpath/${project.filename}.jar
