--- a/ant/apple/apple-preinstall.sh.in
+++ b/ant/apple/apple-preinstall.sh.in
@@ -1,14 +1,14 @@
 #!/bin/bash
-###############################################################################
-#                         ${project.name} Apple OS X Preinstall                       #
-###############################################################################
-#  Description:                                                               #
-#    1. Checks for minimum Java version                                       #
-#    2. Kills any running instances                                           #
-#                                                                             #
-#  Usage:                                                                     #
-#    $ ./preinstall                                                           #
-###############################################################################
+##########################################################################################
+#                               ${project.name} MacOS Preinstall                                 #
+##########################################################################################
+#  Description:                                                                          #
+#    1. Checks for minimum Java version                                                  #
+#    2. Kills any running instances                                                      #
+#                                                                                        #
+#  Usage:                                                                                #
+#    $ ./preinstall                                                                      #
+##########################################################################################
 
 # Check minimum java version
 function check_java() {
