--- a/ant/apple/apple.properties
+++ b/ant/apple/apple.properties
@@ -3,8 +3,9 @@ apple.icon=apple-icon.icns
 
 apple.scripts=${build.dir}/scripts
 
-apple.packager.in=${basedir}/ant/apple/apple-packager.sh.in
-apple.packager.out=${build.dir}/apple-packager.sh
+apple.packager.name=apple-packager.sh
+apple.packager.in=${basedir}/ant/apple/${apple.packager.name}.in
+apple.packager.out=${build.dir}/${apple.packager.name}
 apple.packager.cert=${basedir}/ant/apple/apple-certificate.cer
 apple.packager.signid=P5DMU6659X
 apple.intermediate.cert=${basedir}/ant/apple/apple-intermediate.cer
