--- a/ant/linux/linux.properties
+++ b/ant/linux/linux.properties
@@ -15,8 +15,9 @@ linux.installer.out=${dist.dir}/${linux.installer.name}
 
 linux.installdir=/opt/${project.filename}
 
-linux.packager.in=${basedir}/ant/linux/linux-packager.sh.in
-linux.packager.out=${build.dir}/linux-packager.sh
+linux.packager.name=linux-packager.sh
+linux.packager.in=${basedir}/ant/linux/${linux.packager.name}.in
+linux.packager.out=${build.dir}/${linux.packager.name}
 
 # Console colors
 bash.red=\\e[1;31m
