--- a/ant/self-sign.properties
+++ b/ant/self-sign.properties
@@ -41,3 +41,11 @@ locator.name=locator.sh
 locator.in=${basedir}/ant/firefox/${locator.name}.in
 locator.out=${dist.dir}/auth/firefox/${locator.name}
 
+# Trusted SSL installs only
+ssl.cert=!sslcert
+ssl.key=!sslkey
+ssl.keypair=${jks.install}/auth/${project.filename}.p12
+ssl.command=openssl pkcs12 -export -in ${ssl.cert} -inkey ${ssl.key} -out \\"${ssl.keypair}\\" -name ${jks.alias} -passout pass:${jks.keypass}
+ssl.convert=\\"${jks.keytool}\\" -importkeystore -deststorepass ${jks.storepass} -destkeypass ${jks.keypass} -destkeystore \\"${jks.keystore}\\" -srckeystore \\"${ssl.keypair}\\" -srcstoretype PKCS12 -srcstorepass ${jks.keypass} -alias ${jks.alias}
+
+
