Add subjectAltName to certificate.
Fixes websocket connections in IE/Edge per #6

--- a/ant/self-sign.properties
+++ b/ant/self-sign.properties
@@ -1,6 +1,7 @@
 # Platform-independent info used at install time for wss:// signing
 # Values prefixed with an !exclamation-mark can't be determined until install time
 jks.cn=localhost
+jks.cnalt=localhost.qz.io
 jks.city=Canastota
 jks.state=NY
 jks.country=US
@@ -18,7 +19,7 @@ jks.host=0.0.0.0
 
 jks.keystore=${jks.install}/auth/${project.filename}.jks
 jks.keytool=keytool
-jks.command=\\"${jks.keytool}\\" -genkey -noprompt -alias ${jks.alias} -keyalg RSA -keysize 2048 -dname \\"CN=${jks.cn}, EMAILADDRESS=${vendor.email}, OU=${jks.company}, O=${jks.company}, L=${jks.city}, S=${jks.state}, C=${jks.country}\\" -validity ${jks.validity} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass}
+jks.command=\\"${jks.keytool}\\" -genkey -noprompt -alias ${jks.alias} -keyalg RSA -keysize 2048 -dname \\"CN=${jks.cn}, EMAILADDRESS=${vendor.email}, OU=${jks.company}, O=${jks.company}, L=${jks.city}, S=${jks.state}, C=${jks.country}\\" -validity ${jks.validity} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass} -ext san=dns:${jks.cnalt}
 
 der.cert=${jks.install}/auth/${project.filename}.crt
 der.command=\\"${jks.keytool}\\" -exportcert -alias ${jks.alias} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass} -file \\"${der.cert}\\" -rfc
