--- a/ant/project.properties
+++ b/ant/project.properties
@@ -23,6 +23,10 @@ branding.dir=${asset.dir}/branding
 dist.dir=${out.dir}/dist
 dist.jar=${dist.dir}/${project.filename}.jar
 
+authcert.name=override.crt
+authcert.build=${dist.dir}/${authcert.name}
+authcert.install=!install/${authcert.name}
+
 jar.compress=true
 jar.index=true
 
