--- a/ant/linux/linux-keygen.sh.in
+++ b/ant/linux/linux-keygen.sh.in
@@ -62,6 +62,12 @@ makedercert="${makedercert/$keypass/$password}"
 makedercert="${makedercert/$keystore/$keystorepath}"
 makedercert="${makedercert/$dercert/$dercertpath}"
 
+# // Handle "community" mode, custom signing auth cert
+if [ -n "${build.type}" ]; then
+    authcert="${authcert.install}"
+    authcertpath="${authcert/$install/$installdir}"
+fi
+
 # Property file containing jks signing info
 propspath="${props/$install/$installdir}"
 
@@ -105,6 +111,9 @@ function write_properties {
     echo "wss.keypass=$password" >> "$propspath"
     echo "wss.storepass=$password" >> "$propspath"
     echo "wss.host=${jks.host}" >> "$propspath"
+    if [ -n "$authcertpath" ]; then
+        echo "authcert.override=$authcertpath" >> "$propspath"
+    fi
     echo "" >> "$propspath"
     check_exists  "$propspath"
     return $?
