Fix SSL certs on Windows
Revert a change from 593d632 which broke SSL certs on Windows

--- a/ant/windows/windows-keygen.js.in
+++ b/ant/windows/windows-keygen.js.in
@@ -234,7 +234,7 @@ function createJavaKeystore() {
         die("Can't find ${project.name} installation path. Secure websockets will not work.", "${windows.err.install}");
     }
 
-    var keyStore = fixPath("${jks.keystore}");
+    keyStore = fixPath("${jks.keystore}");
 
     var makeKeyStore;
     if (sslCert) {
