--- a/build.xml
+++ b/build.xml
@@ -201,6 +201,8 @@
             <filterchain><expandproperties/></filterchain>
         </copy>
 
+        <copy file="${windows.cleanup.in}" tofile="${windows.cleanup.out}" />
+
         <exec executable="${nsisbin}" failonerror="true" >
             <arg value="${windows.launcher.out}"/>
         </exec>
