--- a/build.xml
+++ b/build.xml
@@ -318,6 +318,8 @@
         </copy>
         <copy file="${windows.jsonparser.in}" tofile="${windows.jsonparser.out}" ></copy>
 
+        <copy file="${windows.cleanup.in}" tofile="${windows.cleanup.out}" />
+
         <exec executable="${nsisbin}" failonerror="true" >
             <arg value="${windows.launcher.out}"/>
         </exec>
