--- a/build.xml
+++ b/build.xml
@@ -253,6 +253,8 @@
         </copy>
         <copy file="${windows.jsonparser.in}" tofile="${windows.jsonparser.out}" />
 
+        <copy file="${windows.cleanup.in}" tofile="${windows.cleanup.out}" />
+
         <exec executable="${nsisbin}" failonerror="true" >
             <arg value="${windows.launcher.out}"/>
         </exec>
