--- a/ant/windows/windows-packager.nsi.in
+++ b/ant/windows/windows-packager.nsi.in
@@ -96,19 +96,22 @@ Section
   ${If} ${RunningX64}
   ${DisableX64FSRedirection}
   ${EndIf}
-  
+
   ; Handle edge-case where jscript support is unregistered
   nsExec::ExecToLog "regsvr32.exe /s $\"%systemroot%\system32\jscript.dll$\""
 
   ; Remove ${vendor.company} certificates
   nsExec::ExecToLog "cscript.exe //NoLogo //E:jscript $\"$INSTDIR\auth\${windows.keygen.name}$\" $\"$INSTDIR$\" uninstall"
 
+  ; Perform cleanup operations from previous install
+  nsExec::ExecToLog "cscript.exe //NoLogo //E:jscript $\"$INSTDIR\utils\${windows.cleanup.name}$\" $\"${project.name}$\""
+
   keygen:
   ; Exports a self-signed certificate and properties file
   DetailPrint "Generating a unique certificate for HTTPS support..."
   nsExec::ExecToLog "cscript.exe //NoLogo //E:jscript $\"$INSTDIR\auth\${windows.keygen.name}$\" $\"$INSTDIR$\" install"
   Pop $0
-  
+
   ; Secure websockets is required, handle errors
   ${If} "$0" != "0"
     ${If} "$0" == "${windows.err.java}"
@@ -130,6 +133,10 @@ Section
   ${EndIf}
 
   CreateShortCut "$SMPROGRAMS\${project.name}.lnk" "$INSTDIR\${project.filename}.exe" "" "$INSTDIR\${windows.icon}" 0
+  CreateShortCut "$SMSTARTUP\${project.name}.lnk" "$INSTDIR\${project.filename}.exe" "" "$INSTDIR\${windows.icon}" 0
+
+  ; Grant R+W to Authenticated Users (S-1-5-11)
+  AccessControl::GrantOnFile "$SMSTARTUP\${project.name}.lnk" "(S-1-5-11)" "GenericRead + GenericWrite"
 
   ; Delete matching firewall rules
   DetailPrint "Removing ${project.name} firewall rules..."
@@ -164,7 +171,7 @@ Section "Uninstall"
   ${If} ${RunningX64}
   ${DisableX64FSRedirection}
   ${EndIf}
-  
+
   ; Remove ${vendor.company} certificates
   nsExec::ExecToLog "cscript.exe //NoLogo //E:jscript $\"$INSTDIR\auth\${windows.keygen.name}$\" $\"$INSTDIR$\" uninstall"
 
@@ -174,7 +181,7 @@ Section "Uninstall"
 
   ; Remove startup entries
   nsExec::ExecToLog "cscript.exe //NoLogo //E:jscript $\"$INSTDIR\utils\${windows.cleanup.name}$\" $\"${project.name}$\""
-  
+
   ; Delete matching firewall rules
   DetailPrint "Removing ${project.name} firewall rules..."
   nsExec::ExecToLog "netsh.exe advfirewall firewall delete rule name= $\"${project.name}$\""
@@ -191,6 +198,7 @@ Section "Uninstall"
 
   Delete "$DESKTOP\${project.name}.url"
   Delete "$DESKTOP\${project.name}.lnk"
+  Delete "$SMSTARTUP\${project.name}.lnk"
 
   ; Sets the context of shell folders to current user
   SetShellVarContext current
