Fix SSL cert paths with spaces

--- a/ant/self-sign.properties
+++ b/ant/self-sign.properties
@@ -46,7 +46,7 @@ locator.out=${dist.dir}/auth/firefox/${locator.name}
 ssl.cert=!sslcert
 ssl.key=!sslkey
 ssl.keypair=${jks.install}/auth/${project.filename}.p12
-ssl.command=openssl pkcs12 -export -in ${ssl.cert} -inkey ${ssl.key} -out \\"${ssl.keypair}\\" -name ${jks.alias} -passout pass:${jks.keypass}
+ssl.command=openssl pkcs12 -export -in \\"${ssl.cert}\\" -inkey \\"${ssl.key}\\" -out \\"${ssl.keypair}\\" -name ${jks.alias} -passout pass:${jks.keypass}
 ssl.convert=\\"${jks.keytool}\\" -importkeystore -deststorepass ${jks.storepass} -destkeypass ${jks.keypass} -destkeystore \\"${jks.keystore}\\" -srckeystore \\"${ssl.keypair}\\" -srcstoretype PKCS12 -srcstorepass ${jks.keypass} -alias ${jks.alias}
 
 
